<resources>
    <string name="app_name">MyClicker</string>
    <string name="crystal_mine_icon">Crystal Mine Icon</string>
    <string name="crystals">Crystals:</string>
    <string name="_0">0</string>
    <string name="upgrades">Upgrades</string>
    <string name="hard_reset">Hard Reset</string>
    <string name="world_map">World Map</string>
    <string name="buy_a_miner">Buy A Miner</string>
    <string name="buy_a_minecart">Buy A Minecart</string>
    <string name="upgrade_your_pick">Upgrade Your Pick</string>
    <string name="reset_warning">Warning: You are about to reset all progress.</string>
    <string name="continue_question">Continue?</string>
    <string name="diamonds">Diamonds:</string>
    <string name="diamond_mine">Diamond Mine</string>
    <string name="mystery_reset">Mystery Reset</string>
</resources>