<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diamondMineBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diamond_mine"
    tools:context=".DiamondMine">

    <ImageButton
        android:id="@+id/diamondMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03FFFFFF"
        android:contentDescription="@string/diamond_mine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/diamond"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/world_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="@string/world_map"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/diamondText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/diamonds"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diamondNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/diamondText"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>